packages/swc/tests/errors/unsupported_computation/input.js
nameof(process.argv[2 * 2]);
